# aoc_2025

./: .gitignore  README.md  pyproject.toml
day_1/: safe_code.py
day_2/: gift_shop.py
day_3/: battery_storage.py
day_4/: forklifts.py
day_5/: cafeteria.py
