[project]
name = "aoc-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Shani Rub",email = "shani.rubovitch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
