[project]
name = "aoc-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Shani Rub",email = "shani.rubovitch@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipdb (>=0.13.13,<0.14.0)",
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
